--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -1,8 +1,41 @@
+
 @font-face {
     font-family: "montser";
     src: url("../Fonts/Montserrat/static/Montserrat-Regular.ttf");
 }
+@font-face {
+    font-family: "cabin-it";
+    src: url("../Fonts/Cabin/static/Cabin-Italic.ttf");
+}
 
+
+.hero-bg{
+    width: 100%;
+    height: 600px;
+    background-image: url("../Images/hero\ image.png");
+    /* background-size: cover; */
+    background-size:100% 90%;
+    /* background-position-y:80px; */
+    background-repeat:no-repeat;
+    
+    /* background-position-y:75px; */
+    
+}
+
+@media (min-width:320px) and (max-width:670px){
+    .hero-bg{
+        width: 100%;
+        height: 500px;
+        background-image: url("../Images/hero\ image.png");
+        background-size:cover;
+        /* background-size: contain; */
+        background-position: right 75% top 0px;
+        /* background-position-y:72px; */
+        background-repeat:no-repeat;
+        /* background-position-x:-265px; */
+    }
+    
+}
 .links{
     max-width: 120px;
     height: 32px;
