--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -11,7 +11,7 @@
 
 .hero-bg{
     width: 100%;
-    height: 600px;
+    height: 670px;
     background-image: url("../Images/hero\ image.png");
     /* background-size: cover; */
     background-size:100% 90%;
@@ -20,6 +20,15 @@
     
     /* background-position-y:75px; */
     
+}
+
+.Sustainability{
+    width:100%;
+    height: 450px;
+    background-image: url("../Images/gt\ \(2\).jpg");
+    background-size:cover;
+    background-repeat: no-repeat;
+    background-position-y: -285px;
 }
 
 @media (min-width:320px) and (max-width:670px){
